kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-public
  namespace: launchblock-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-public
      namespace: launchblock-services
  template:
    metadata:
      labels:
        app: api-public
        namespace: launchblock-services
    spec:
      imagePullSecrets:
        - name: private-registry-secret
      containers:
        - name: api-public
          image: private-docker-registry.launchblock.dev/api-public:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-public
  namespace: launchblock-services
spec:
  selector:
    app: api-public
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-public
  namespace: launchblock-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.launchblock.gg`)
      kind: Rule
      services:
        - name: api-public
          port: 80
  tls:
    certResolver: letsencrypt
